# libsifis-rs

./: Cargo.toml  README.md
.github/workflows/: libsifis.yml
examples/: ls.rs
generate-sifis-hazards/: Cargo.toml  README.md  ontology.jsonld  sifis-rust-api.rs
generate-sifis-hazards/src/: filters.rs  lib.rs
generate-sifis-hazards/src/toolchain/: mod.rs  rust.rs
generate-sifis-hazards/templates/rust/: Cargo.toml  api.rs
sifis-abstraction/: Cargo.toml
sifis-abstraction/src/: context.rs  lib.rs  light.rs  oven.rs
src/: discovery.rs  hazard.rs  label.rs  lib.rs  ontology.rs  thing.rs
